samples/task/invalid/R49.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <context>
      <note>Direct text in note is not allowed.</note>
    </context>
    <steps><step><cmd/></step></steps>
  </taskbody>
</task>